Restructure the monitor couchapp using WMCore couchskel.

--- a/src/couchapp/monitor/_attachments/dest-source-stat.html
+++ b/src/couchapp/monitor/_attachments/dest-source-stat.html
@@ -3,24 +3,30 @@
     <head>
         <title>AsyncTransfer Monitor System</title>
         <link rel="stylesheet" href="style/main.css" type="text/css">
-        <script language="JavaScript" src="calendar_db.js"></script>
-        <link rel="stylesheet" href="calendar.css">
+        <script language="JavaScript" src="js/calendar_db.js"></script>
+        <link rel="stylesheet" href="style/calendar.css">
     </head>
     <body>
     <div id="main">
         <div id="head"><h2>AsyncTransfer Monitor System</h2></div>
         <div id="sidebar"><p></p></div>
         <div id="items">
+            <div style="text-align: center">
+                <p align="left">
+                &nbsp;&nbsp;- Set the start and end date/time. If at least one field is left blank, a default time slice of 24 hours (back from now) will be used.<br>
+                &nbsp;&nbsp;- Use the "Reload Plots" button to update the graphs with the chosen options.
+                </p>
+            </div>
         <form name="datetimeform" id="datetimeform">
-	<!-- calendar attaches to existing form element -->
+        <!-- calendar attaches to existing form element -->
         <a>&nbsp;&nbsp;Start Date&nbsp;</a>
         <input type="text" id="start" value="" />
-	<script language="JavaScript">
-	var o_cal = new tcal ({
-		// form name
-		//'formname': 'testform',
-		// input name
-		'controlname': 'start'
+        <script language="JavaScript">
+        var o_cal = new tcal ({
+            // form name
+            //'formname': 'testform',
+            // input name
+            'controlname': 'start'
         });
         // individual template parameters can be modified via the calendar variable
         o_cal.a_tpl.yearscroll = true;
@@ -66,8 +72,8 @@
         //      'imgpath' : 'img/'
         //}
         var e_cal = new tcal ({
-                // if referenced by ID then form name is not required
-                'controlname': 'end'
+            // if referenced by ID then form name is not required
+            'controlname': 'end'
         }); //, A_CALTPL);
         e_cal.a_tpl.yearscroll = true;
         e_cal.a_tpl.weekstart = 1;
@@ -100,7 +106,7 @@
                 <option value="22">22:00</option>
                 <option value="23">23:00</option>
         </select>
-        &nbsp;&nbsp;&nbsp;&nbsp;<INPUT TYPE="button" NAME="buttonreset" Value="Default" onClick='resetDateTime();setOptions();drawchart()'>
+        &nbsp;&nbsp;&nbsp;&nbsp;<INPUT TYPE="button" NAME="buttonreset" Value="Clear" onClick='resetDateTimeForm()'>
         </form>
         <form name="yaxisform" id="yaxisform">
         <a>&nbsp;&nbsp;Y-Axis Unit&nbsp;</a>
@@ -109,7 +115,7 @@
                 <option value="size" text="Files Size (MB)">Files Size (MB)</option>
         </select>
         </form>
-        <center><INPUT TYPE="button" NAME="button" Value="Reload Plots" onClick='setOptions();drawchart()'></center>
+        <center><INPUT TYPE="button" NAME="button" Value="Reload Plots" onClick='drawchart(true)'></center>
         <h2 id= "dest">Destination Site Monitoring</h2>
         <h3>Status of Active Files</h3>
         <div id="startedd"> Retriving Data... </div>
@@ -129,21 +135,20 @@
     </div>
     </body>
 
-<script src="vendor/couchapp/loader.js"></script>
+<script src="js/loader.js"></script>
 <script type="text/javascript" charset="utf-8">
 
 $.couch.app(function(app) {
-    //$("#items").evently("destsourcetime", app);
-    $("#sidebar").evently("menu", app)
-    $("#head").evently("head", app)
+    $("#head").evently("head", app);
+    $("#sidebar").evently("menu", app);
 });
 
 $(document).ready(function() {
     // put all your jQuery goodness in here.
     $("h2#dest").html("Destination Site Monitoring ["+dest+"]");
     $("h2#source").html("Source Site Monitoring ["+src+"]");
-    drawchart();
-    setInterval(function() drawchart(), 60000);
+    drawchart(false);
+    setInterval(function() drawchart(false),60000);
 });
 
 function parseGetVars() {
@@ -194,6 +199,7 @@ var endd = new Date();
 var defaultDateTime = true;
 
 var yaxis = ("njobs").toString();
+var yaxisLabel = "Number of Files";
 var MB = 1048576;
 
 function isStartDateDefined() {
@@ -263,15 +269,18 @@ function setDateTime() {
             startd = startdate;
             endd = enddate;
         }
-        defaultDateTime = false;
+        setDefaultDateTime(false);
     }
     else {
-        resetDateTime();
+        setDefaultDateTime(true);
     }
 }
 
-function resetDateTime() {
-    defaultDateTime = true;
+function setDefaultDateTime(state) {
+    defaultDateTime = state;
+}
+
+function resetDateTimeForm() {
     document.getElementById('datetimeform').reset();
 }
 
@@ -279,18 +288,19 @@ function getYAxis() {
     return ($("#yaxis").val()).toString();
 }
 
-function getYAxisLabel() {
-    if (getYAxis() == "njobs") {
-        return "Number of Files";
+function setYAxisLabel() {
+    if (yaxis == ("njobs").toString()) {
+        yaxisLabel = "Number of Files";
     }
-    else if (getYAxis() == "size") {
-        return "Files Size (MB)";
+    else if (yaxis == ("size").toString()) {
+        yaxisLabel = "Files Size (MB)";
     }
     return "";
 }
 
 function setYAxis() {
     yaxis = getYAxis();
+    setYAxisLabel();
 }
 
 function setOptions() {
@@ -544,7 +554,10 @@ inputess.popolate = function() {
     inputess.stacked.push(killfile);
 }
 
-function drawchart() {
+function drawchart(setoptions) {
+    if (setoptions) {
+        setOptions();
+    }
     if (defaultDateTime) {
         calcInterval();
     }
@@ -554,12 +567,12 @@ function drawchart() {
     inputss.popolate();
     inputes.popolate();
     inputess.popolate();
-    setTimeout(function() stackedArea("startedd",inputsd,getYAxisLabel()),1000);
-    setTimeout(function() stackedArea("endedd",inputed,getYAxisLabel()),1000);
-    setTimeout(function() stackedArea("endedds",inputeds,getYAxisLabel()),1000);
-    setTimeout(function() stackedArea("starteds",inputss,getYAxisLabel()),1000);
-    setTimeout(function() stackedArea("endeds",inputes,getYAxisLabel()),1000);
-    setTimeout(function() stackedArea("endedss",inputess,getYAxisLabel()),1000);
+    setTimeout(function() stackedArea("startedd",inputsd,yaxisLabel),1000);
+    setTimeout(function() stackedArea("endedd",inputed,yaxisLabel),1000);
+    setTimeout(function() stackedArea("endedds",inputeds,yaxisLabel),1000);
+    setTimeout(function() stackedArea("starteds",inputss,yaxisLabel),1000);
+    setTimeout(function() stackedArea("endeds",inputes,yaxisLabel),1000);
+    setTimeout(function() stackedArea("endedss",inputess,yaxisLabel),1000);
 }
 
 </script>
